@@ -1,3 +1,4 @@
+ - use Detect() instead of WhereIs() to detect gnuplot
  - fix typo 'BUILDER' -> 'BUILDERS' in gnuplot/__init__.py
 RELEASE 0.4a - Sat, 22 Feb 2014
  - Use curl instead of hg to download dependencies.
